fixed spacing

--- a/stylesheets/layout.styl
+++ b/stylesheets/layout.styl
@@ -26,8 +26,8 @@ p,h1
     margin-left: 70px
 
 .social
-    margin-top: 220px
-    height: 80px
+    margin-top: 200px
+    height: 100px
 
 .networks
     absolute: right 70
